pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: timeout-pod
  creationTimestamp: null
  labels:
    app: jsessionid-demo
spec:
  containers:
  - image: servicesengineering/jsessionid-demo:0.3
    name: jsessionid-demo
    ports:
    - containerPort: 8080
    livenessProbe:
      httpGet:
        path: /actuator/health
        port: 8080
      initialDelaySeconds: 20
      periodSeconds: 3
